use position: fixed on narrow displays (100% width/height)

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -424,9 +424,13 @@ footer {
     display: table;
     width: 100%;
     height: 60px;
-    position: sticky;
     z-index: 100;
     bottom: 20px;
+    position: sticky;
+
+    @media only screen and (max-width: 450px) {
+      position: fixed;
+    }
 
     menu {
         width: 100%;
